White space fix for safari.

--- a/_sass/base/_intro.scss
+++ b/_sass/base/_intro.scss
@@ -11,7 +11,7 @@ body.home-intro {
   text-align: center;
   vertical-align: middle;
   position: relative;
-  padding: 0 $base-spacing;
+  padding-bottom: 200px;
   text-align: center;
   color: $lighter-gray-color;
   background: linear-gradient(160deg, darken($primary-color, 6%), darken($blue-color, 35%));
@@ -19,6 +19,10 @@ body.home-intro {
   // background-repeat: no-repeat;
   // background-position: 0 100%;
   // background-size: 55% 55%;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
   overflow: hidden;
 }
 
